fix: new API and comments
