# src/comments/comment.controller.ts
@@ -1,6 +1,5 @@
 import {
   Body,
-  Controller,
   Delete,
   Get,
   Headers,
@@ -9,18 +8,17 @@ import {
   ParseIntPipe,
   Post,
   Put,
-  Query,
-  UseFilters,
-  UsePipes,
   ValidationPipe,
 } from '@nestjs/common';
-import { InjectRepository } from '@nestjs/typeorm';
-import { Repository } from 'typeorm';
+import { Controller, UsePipes, UseFilters } from '@nestjs/common';
 import { AuthService } from '../auth/auth.service';
 import { BaseErrorExceptionFilter } from '../common/error/error-filter';
-import { Question } from '../questions/questions.entity';
-import { AgreeCommentResponseDto } from './DTO/agree-comment.dto';
+import { AgreeCommentResponseDto } from './DTO/agreeComment.dto';
+import { DeleteCommentRespondDto } from './DTO/deleteComment.dto';
 import { CommentsService } from './comment.service';
+import { CommentResponseDto } from './DTO/comment.dto';
+import { GetCommentsResponseDto } from './DTO/getComments.dto';
+import { AgreeCommentDto } from './DTO/agreeComment.dto';
 @Controller('/comments')
 @UsePipes(new ValidationPipe())
 @UseFilters(new BaseErrorExceptionFilter())
@@ -28,120 +26,109 @@ export class CommentsController {
   constructor(
     private readonly commentsService: CommentsService,
     private readonly authService: AuthService,
-    @InjectRepository(Question)
-    private questionsRepository: Repository<Question>,
   ) {}
 
-  @Get('/:id')
-  async getAnswerComments(
-    @Param('id', ParseIntPipe) id: number,
-    @Param('answer_id', ParseIntPipe) answerId: number,
+  @Get('/:comment_Id')
+  async getComments(
+    @Param('comment_Id', ParseIntPipe) commentId: number,
     @Query('page_start', new ParseIntPipe({ optional: true }))
     pageStart?: number,
     @Query('page_size', new ParseIntPipe({ optional: true }))
     pageSize: number = 20,
-  ) {
-    const question = await this.questionsRepository.findOneBy({ id: id });
-    if (!question) {
-      throw new NotFoundException('Question not found');
-    }
-
-    const { sub_comment_count, sub_comments } =
-      await this.commentsService.getAnswerComments(
-        answerId,
-        pageStart,
-        pageSize,
-      );
+  ): Promise<GetCommentsResponseDto> {
+    const commentData = (
+      await this.commentsService.getComments(commentId, pageStart, pageSize)
+    ).data.comments;
+    const page = (
+      await this.commentsService.getComments(commentId, pageStart, pageSize)
+    ).data.page;
     return {
       code: 200,
-      sub_comment_count,
-      sub_comments,
-      page: {
-        page_start: pageStart,
-        page_size: pageSize,
+      message: 'Get comments successfully',
+      data: {
+        comments: commentData,
+        page,
       },
     };
   }
 
-  @Post('/:id')
-  async commentAnswer(
-    @Param('id', ParseIntPipe) id: number,
-    @Param('answer_id', ParseIntPipe) answerId: number,
+  @Post('/commentableType/commentableId')
+  async createComment(
+    @Param('CommentableType')
+    CommentableType: 'answer' | 'comment' | 'question',
+    @Param('CommentableId', ParseIntPipe) CommentableId: number,
+    @Body('content') content: string,
     @Headers('Authorization') auth: string | undefined,
-    @Body() requestBody: { content: string; quote_id: number | null },
-  ) {
-    this.commentsService.commentAnswer(answerId, requestBody.content);
+  ): Promise<CommentResponseDto> {
+    const userId = this.authService.verify(auth).userId;
+    if (!userId) {
+      throw new NotFoundException('User not found');
+    }
+    const data = (
+      await this.commentsService.createComment(
+        userId,
+        content,
+        CommentableType,
+        CommentableId,
+      )
+    ).data;
     return {
       code: 200,
+      message: 'Create comment successfully',
+      data: data,
     };
   }
 
-  @Delete('/:id')
+  @Delete('/comment_Id')
   async deleteComment(
-    @Param('id', ParseIntPipe) id: number,
-    @Param('answer_id', ParseIntPipe) answerId: number,
-    @Param('comment_id', ParseIntPipe) commentId: number,
+    @Param('comment_Id', ParseIntPipe) comment_Id: number,
     @Headers('Authorization') auth: string | undefined,
-  ): Promise<void> {
+  ): Promise<DeleteCommentRespondDto> {
     const userId = this.authService.verify(auth).userId;
 
     if (!userId) {
       throw new NotFoundException('Unauthorized');
     }
-    await this.commentsService.deleteComment(commentId);
-
-    return;
-  }
-
-  @Put('/id:')
-  async agreeComment(
-    @Param('id', ParseIntPipe) id: number,
-    @Param('answer_id', ParseIntPipe) answerId: number,
-    @Param('comment_id', ParseIntPipe) commentId: number,
-    @Body() requestBody: { agree_type: number },
-    @Headers('Authorization') auth: string | undefined,
-  ): Promise<AgreeCommentResponseDto> {
-    const userId = this.authService.verify(auth).userId;
-
-    const { agree_type } = requestBody;
-
-    await this.commentsService.agreeComment(
-      userId,
-      answerId,
-      commentId,
-      agree_type,
-    );
-
+    await this.commentsService.deleteComment(userId, comment_Id);
     return {
-      code: 200,
-      message: '操作成功',
-      agree_type: agree_type,
+      code: 204,
+      message: 'comment deleted already',
+      success: true,
     };
   }
 
-  @Get('/')
-  async getCommentDetail(
-    @Param('id', ParseIntPipe) questionId: number,
-    @Param('answer_id', ParseIntPipe) answerId: number,
-    @Param('comment_id', ParseIntPipe) commentId: number,
-    @Query('page_start', new ParseIntPipe({ optional: true }))
-    pageStart?: number,
-    @Query('page_size', new ParseIntPipe({ optional: true }))
-    pageSize: number = 20,
-  ) {
-    const { comment, subComments, page } =
-      await this.commentsService.getCommentDetail(
-        answerId,
-        commentId,
-        pageStart,
-        pageSize,
-      );
+  @Put('/:comment_Id/agree:')
+  async agreeComment(
+    @Param('comment_Id', ParseIntPipe) comment_Id: number,
+    @Body() requestBody: AgreeCommentDto,
+    @Headers('Authorization') auth: string | undefined,
+  ): Promise<AgreeCommentResponseDto> {
+    const userId = this.authService.verify(auth).userId;
+    if (!userId) {
+      throw new NotFoundException('User not found');
+    }
+    const agree_type = requestBody;
+
+    await this.commentsService.agreeComment(comment_Id, agree_type);
 
     return {
       code: 200,
-      comment,
-      subComments,
-      page,
+      message: 'Nice work',
+      data: { agree_type: agree_type.agree_type },
+    };
+  }
+
+  @Get('/comment_Id')
+  async getCommentDetail(
+    @Param('comment_Id', ParseIntPipe) comment_Id: number,
+  ): Promise<CommentResponseDto> {
+    const comment = (await this.commentsService.getCommentDetail(comment_Id))
+      .data;
+
+    return {
+      code: 200,
+      message: 'Details are as follows',
+      data: comment,
     };
   }
 }
